log
Sat Apr 23 02:50:39 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
e903cba
Sat Apr 23 02:51:11 UTC 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
552d9e5
Sat Apr 23 02:51:46 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
f9732ca
Sat Apr 23 03:04:58 UTC 2022: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
e4816bd
Sat Apr 23 03:05:06 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eefd32a
Sat Apr 23 03:05:17 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c360d7d
Sat Apr 23 03:06:35 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a1fe75
Sat Apr 23 03:08:48 UTC 2022: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
de70b41
Sat Apr 23 03:08:53 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f55c93f
